<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:inputType="text"
        android:key="site_code"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_credentials_site_code"/>

    <EditTextPreference
        android:inputType="text"
        android:key="api_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_credentials_api_key"/>

    <EditTextPreference
        android:inputType="textUri"
        android:key="vproxy_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_vproxy_url" />

</PreferenceScreen>
